start on 1 hour

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
         <div class="col s12" id="top">
           <h1 class="jugo">jugo</h1>
           <p>"Historias <span class="jugo">jugosas</span>" being discussed in the...</p>
-          <a class="waves-effect waves-light btn hour-btn" id="hour-1">last hour</a>
+          <a class="waves-effect waves-light btn hour-btn active" id="hour-1">last hour</a>
           <a class="waves-effect waves-light btn hour-btn" id="hour-4">last 4 hours</a>
-          <a class="waves-effect waves-light btn hour-btn active" id="hour-24">last day</a>
+          <a class="waves-effect waves-light btn hour-btn" id="hour-24">last day</a>
         </div>
       </div>
       <div class="row" id="cards"></div>
