--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,6 +7,12 @@ div, span, p {
   text-overflow: ellipsis;
 }
 
+.card-content p {
+  display: block;
+  height: 63px;
+  overflow: hidden;
+}
+
 span.card-title {
   white-space: nowrap;
 }
@@ -76,8 +82,9 @@ a.btn.active {
 }
 
 
-img {
-  min-height: 100%;
+div.card .card-image img {
+  min-height: 250px;
+  width: auto;
   min-width: 100%;
 }
 
