--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jugo</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
+  <link rel="stylesheet" href="static/lib/materialize.min.css">
   <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
@@ -25,8 +25,8 @@
       </div>
     </div>
   </div>
-  <script src="static/lib/jquery-2.1.3.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/js/materialize.min.js"></script>
+  <script src="static/lib/jquery-1.11.2.min.js"></script>
+  <script src="static/lib/materialize.min.js"></script>
   <script src="static/lib/d3.v3.min.js"></script>
   <script src="static/js/main.js"></script>
 </body>
